--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 </head>
-<body>
+<body>  
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
@@ -40,9 +40,9 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1"></div>
-                <div class="text-2">Welcome to our official website!</div>
+                <div class="text-2">Welcome to Our Official Website!</div>
                 <div class="text-3"> <span class="typing"></span></div>
-                <a href="#">View more!</a>
+                <a href="#">View More!</a>
             </div>
         </div>
     </section>
@@ -50,7 +50,7 @@
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About our Website</h2>
+            <h2 class="title">About Our Website</h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="images/About us.png" alt="">
