--- a/index.html
+++ b/index.html
@@ -100,46 +100,46 @@
     <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">Our service Percentage</h2>
+            <h2 class="title">Review and Feedback</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">On this section we will illustrate to you our Service Percentage </div>
-                    <p>This is our Service Percentage where our capabilities can help and introduce you, example of our Web design that has 90% in our team and with a 60% on Advertising not really achieving the perfect Goal but can give and guide you with proper suggestions and so as the others and extra. Exampling of App design with 80% and animation that has 50% and lastly Video Shooting with a percentage of 70%</p>
+                    <div class="text">Displayed here is the reviews and feedbacks of our customers and respondents. </div>
+                    <p> This is the reviews and feedback we have gathered so far since the launching of our website. Demonstrated here are the satisfactory ratings given by our customers. This will serve as a testimonial to vouch for our product and services.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>Web Design</span>
-                            <span>90%</span>
+                            <span>Blank</span>
+                            <span>0%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Advertising</span>
-                            <span>60%</span>
+                            <span>Blank</span>
+                            <span>0%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>App Design</span>
-                            <span>80%</span>
+                            <span>Blank</span>
+                            <span>0%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Animation</span>
-                            <span>50%</span>
+                            <span>Blank</span>
+                            <span>0%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Video Shooting</span>
-                            <span>70%</span>
+                            <span>Blank</span>
+                            <span>0%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
@@ -170,7 +170,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/305509034_419705566814696_4402108744654488190_n.jpg" alt="">
-                        <div class="text">AL Karssen</div>
+                        <div class="text">Al Karssen</div>
                         <p>Website Creator</p>
                     </div>
                 </div>
@@ -204,22 +204,22 @@
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
-                                <div class="head">Our admin</div>
-                                <div class="sub-title">LPVS.OrgMessageMe.com</div>
+                                <div class="head">Our Admin</div>
+                                <div class="sub-title">https://github.com/seriyanna</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Our Location</div>
-                                <div class="sub-title">Sandejas St 1969 Pasay City</div>
+                                <div class="sub-title">Pasay City</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Our Email</div>
-                                <div class="sub-title">LPVS.Org@Gmail.com</div>
+                                <div class="sub-title">lpvs.org@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -256,5 +256,43 @@
     </footer>
 
     <script src="script.js"></script>
+<!-- Code injected by live-server -->
+<script>
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script>
 </body>
 </html>
